# proofreader-ai

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  logging.ini  pyproject.toml
.github/: copilot-instructions.md
proofreader_ai/: __init__.py  controller.py  logger.py  main.py  message.py  model.py  server.py  service.py
tests/: __init__.py  test_controller.py  test_service.py
